Implementando interface Typescript

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import GitHub from "./icons/GitHub.astro"
     <a
     >
     <p class="text-6xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white">
-      ¡Hola! Soy Amílcar
+      ¡Hola! Soy Amilcar
     </p>
       <p
   class="mt-10 text-3xl dark:text-yellow-200 text-yellow-500 font-semibold dark:text-gray-300"
