--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,8 @@ import Hero from "../components/Hero.astro"
 import TitleSection from "../components/TitleSection.astro"
 import "../styles/global.css";
 import Church from "../components/icons/Church.astro"
-import AboutMe2 from "../components/AboutMe2.astro"
+
+import { info } from '../content/data/db'
 ---
 
 
@@ -27,22 +28,17 @@ import AboutMe2 from "../components/AboutMe2.astro"
     </SectionContainer>
 
     <div class="space-y-24">
+      {
+        info.map((card, index) => (
+          <AboutMe
+            title={card.title}
+            text={card.text}
+            icon={card.icon}
+            image={card.image}
+          />
+        ))
+      }
 
-      <SectionContainer id="sobre-mi">
-        <TitleSection>
-          <ProfileCheck class="size-8" />
-          Sobre mí
-        </TitleSection>
-        <AboutMe />
-      </SectionContainer>
-
-      <SectionContainer id="pasiones-y-Fortalezas">
-        <TitleSection>
-          <Church class="size-8" />
-          Pasiones y Fortalezas
-        </TitleSection>
-        <AboutMe2 />
-      </SectionContainer>
     
       <SectionContainer id="experiencia">
         <TitleSection>
