--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,16 @@ import ThemeToggle from "./ThemeToggle.astro"
 
 const navItems = [
   {
+    title: "Inicio",
+    label: "Inicio",
+    url: "/#Inicio",
+  },
+  {
+    title: "Sobre mí",
+    label: "sobre-mi",
+    url: "/#sobre-mi",
+  },
+  {
     title: "Experiencia",
     label: "experiencia",
     url: "/#experiencia",
@@ -11,11 +21,6 @@ const navItems = [
     title: "Proyectos",
     label: "proyectos",
     url: "/#proyectos",
-  },
-  {
-    title: "Sobre mí",
-    label: "sobre-mi",
-    url: "/#sobre-mi",
   },
   {
     title: "Contacto",
