--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,12 +5,22 @@ const navItems = [
   {
     title: "Inicio",
     label: "Inicio",
-    url: "/#Inicio",
+    url: "/#inicio",
   },
   {
     title: "Sobre mí",
     label: "sobre-mi",
     url: "/#sobre-mi",
+  },
+  {
+    title: "Habilidades",
+    label: "Habilidades",
+    url: "/#habilidades",
+  },
+  {
+    title: "Contacto",
+    label: "contacto",
+    url: "/#contacto",
   },
   {
     title: "Experiencia",
@@ -22,24 +32,19 @@ const navItems = [
     label: "proyectos",
     url: "/#proyectos",
   },
-  {
-    title: "Contacto",
-    label: "contacto",
-    url: "/#contacto",
-  },
 ]
 ---
 
 <header
-  class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2"
+  class="fixed top-1 z-10 flex items-center justify-center w-full mx-auto mt-2"
 >
   <nav
-    class="flex px-3 text-sm font-medium rounded-full text-gray-600 dark:text-gray-200 justify-center items-center"
+    class="flex px-6 text-sm font-medium rounded-full text-gray-600 dark:text-gray-100 justify-center items-center"
   >
     {
       navItems.map((link) => (
         <a
-          class="relative block px-2 py-2 transition hover:text-blue-500 dark:hover:text-blue-500"
+          class="relative block px-2 py-2 transition hover:text-blue-700 dark:hover:text-blue-700"
           aria-label={link.label}
           href={link.url}
         >
