--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,13 @@ import { info, skills } from '../content/data/db'
   description="Portafolio profesional, ademas de ser un proyecto de la clase de Sistemas Expertos"
 >
   <main class="px-4">
-    <SectionContainer id="Inicio" class=" md:py-28">
+    <SectionContainer id="inicio" class=" md:py-22">
       <Hero>
       </slot>
     </Hero>
     </SectionContainer>
 
-    <SectionContainer id="sobre-mi">
+    <SectionContainer id="sobre-mi" >
     <div class="space-y-24">
       {
         info.map((card, index) => (
@@ -38,6 +38,17 @@ import { info, skills } from '../content/data/db'
           />
         ))
       }
+      </SectionContainer>
+
+      <SectionContainer id="habilidades" class=" md:py-22">
+        <TitleSection>
+        <CodeIcon class="size-8" />
+        Habilidades
+      </TitleSection>
+        <Skills 
+        name=""
+        skills={skills}
+      />
       </SectionContainer>
     
       <SectionContainer id="experiencia">
@@ -56,16 +67,7 @@ import { info, skills } from '../content/data/db'
         <Projects />
       </SectionContainer>
 
-      <SectionContainer id="habilidades">
-        <TitleSection>
-        <CodeIcon class="size-8" />
-        Habilidades
-      </TitleSection>
-        <Skills 
-        name=""
-        skills={skills}
-      />
-      </SectionContainer>
+
 
   </div>
   </main>
