--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,29 +1,25 @@
 ---
-const currentYear = new Date().getFullYear()
+import { Footerss } from '../content/data/db'
 ---
 
 <footer
-  class="opacity-80 m-4 min-[375px]:pl-4 md:pl-0 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
 >
   <div
-    class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
+    class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-6"
   >
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
-      >© {currentYear}
-      <a href="https://midu.dev/" class="hover:underline">midudev</a>. Casi
-      todos los derechos reservados
+      >
     </span>
     <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
+      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90"
     >
-      <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
-      </li>
-      <li>
-        <a id="contacto" href="mailto:miduga@gmail.com" class="hover:underline"
-          >Contacto</a
-        >
-      </li>
+    <p class="me-8">Contáctame:</p>
+        {
+          Footerss.map((foo) => (
+          <foo.icon class="size-6 md-3 me-1" />
+          <a href={foo.url} class="hover:underline me-4 md:me-8">{foo.name}</a>
+        ))
+      }
     </ul>
   </div>
 </footer>
