--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,50 +1,18 @@
 ---
 import ThemeToggle from "./ThemeToggle.astro"
-
-const navItems = [
-  {
-    title: "Inicio",
-    label: "Inicio",
-    url: "/#inicio",
-  },
-  {
-    title: "Sobre mí",
-    label: "sobre-mi",
-    url: "/#sobre-mi",
-  },
-  {
-    title: "Habilidades",
-    label: "Habilidades",
-    url: "/#habilidades",
-  },
-  {
-    title: "Contacto",
-    label: "contacto",
-    url: "/#contacto",
-  },
-  {
-    title: "Experiencia",
-    label: "experiencia",
-    url: "/#experiencia",
-  },
-  {
-    title: "Proyectos",
-    label: "proyectos",
-    url: "/#proyectos",
-  },
-]
+import { Items } from '../content/data/db';
 ---
 
 <header
   class="fixed top-1 z-10 flex items-center justify-center w-full mx-auto mt-2"
 >
   <nav
-    class="flex px-6 text-sm font-medium rounded-full text-gray-600 dark:text-gray-100 justify-center items-center"
+    class="flex px-5 text-sm font-medium rounded-full text-gray-600 dark:text-gray-100 justify-center items-center"
   >
     {
-      navItems.map((link) => (
+      Items.map((link) => (
         <a
-          class="relative block px-2 py-2 transition hover:text-blue-700 dark:hover:text-blue-700"
+          class="relative block px-4 py-2 transition hover:text-blue-700 dark:hover:text-blue-700"
           aria-label={link.label}
           href={link.url}
         >
