--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -10,13 +10,13 @@ const { name, skills } = Astro.props;
 ---
 <section id="skills" class="mb-12">
 
-    <h2 class="text-2xl font-bold mb-6">{name}</h2>
+    <p class="text-2xl font-bold mb-6">{name}</p>
 
     <div class="grid md:grid-cols-3 gap-2">
 
         {Object.entries(skills).map(([c, s]) => (
             <div class="bg-card rounded-lg p-3 shadow">
-                <h3 class="text-2xl font-bold mb-5">{c}</h3>
+                <p class="text-2xl text-pretty dark:text-yellow-100 font-mono mb-6">{c}</p>
                 <div class="space-y-3">
                 {
                     s.skills
@@ -24,8 +24,8 @@ const { name, skills } = Astro.props;
                     .sort((a, b) => b.level - a.level) 
                     .map((skill, index) => (
                             <div class="flex justify-between mb-1">
-                                <span class="text-s text-pretty font-semibold order-2 md:order-1">{skill.name}</span>
-                                <span class="text-s text-pretty">{skill.level}%</span>
+                                <span class="text-pretty dark:text-gray-300 font-semibold order-2 md:order-1">{skill.name}</span>
+                                <span class="text-pretty dark:text-gray-300">{skill.level}%</span>
                             </div>
                             <div class="w-full bg-gray-300 dark:bg-gray-800 rounded-full h-2.5 mt-1">
                                 <div class={`${s.color} dark:${s.color} h-2.5 rounded-full`} style={`width: ${skill.level}%`}></div>
