--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,5 +1,5 @@
-<h2
-	class={`flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white ${Astro.props.className}`}
+<p
+	class={`flex items-center mb-8 text-4xl font-semibold gap-x-4 dark:text-white ${Astro.props.className}`}
 >
     <slot />
-</h2>
+</p>
