Portafolio Profesional Completo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,9 +20,9 @@ import { Items } from '../content/data/db';
         </a>
       ))
     }
-    <ThemeToggle />
   </nav>
 </header>
+<!-- <ThemeToggle /> Aun en pruebas y sin poderlo probar-->
 
 <script>
   document.addEventListener("astro:page-load", () => {
