--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ import GitHub from "./icons/GitHub.astro"
       ¡Hola! Soy Amilcar
     </p>
       <p
-  class="mt-10 text-3xl dark:text-yellow-200 text-yellow-500 font-semibold dark:text-gray-300"
+  class="mt-10 text-3xl text-blue-600 dark:text-yellow-500 font-semibold"
 >
   Entusiasta del Desarrollo Web
 </p>
